Refaktorovanie HTML a CSS pre biliardový sprievodca: zjednodušenie štruktúry, pridanie responzívneho dizajnu a vylepšenie štýlov.

--- a/index.html
+++ b/index.html
@@ -10,107 +10,43 @@
 </head>
 
 <body>
-    <header>
-        <h1>Biliardový sprievodca</h1>
-        <nav>
-            <ul>
-                <li><a href="#historia">História</a></li>
-                <li><a href="#pravidla">Pravidlá</a></li>
-                <li><a href="#vybavenie">Vybavenie</a></li>
-                <li><a href="#techniky">Techniky</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <article id="historia">
-            <h2>História biliardu</h2>
-            <p>Prvé zmienky o hre podobnej biliardu pochádzajú už z <abbr title="Pred naším letopočtom">15. storočia</abbr> vo Francúzsku. Pôvodne sa hralo na trávnikových plochách, neskôr sa presunulo do interiérov.</p>
-
-            <blockquote cite="https://www.billiardshistory.org">
-                <p>"Biliard sa vyvinul z aristokratických hier dvora a stal sa základom modernej zábavy v záhradných podnikoch."</p>
-            </blockquote>
-
-            <dl>
-                <dt>Carom</dt>
-                <dd>Starší typ biliardu bez dier</dd>
-                <dt>Pool</dt>
-                <dd>Moderná verzia s 6 dierami</dd>
-            </dl>
-        </article>
-
-        <section id="pravidla">
-            <h2>Základné pravidlá</h2>
-            <article>
-                <h3>8-Ball</h3>
-                <p>Cieľom hry je <strong>správne označiť a postupne zahŕňať svoju skupinu gúľ</strong>, nakoniec zahrať čiernu guľu číslo 8.</p>
-                <ol>
-                    <li>Rozostavenie gúľ do trojuholníka</li>
-                    <li>Rozbíjanie formácie</li>
-                    <li>Striedanie ťahov medzi hráčmi</li>
-                </ol>
-            </article>
-
-            <article>
-                <h3>9-Ball</h3>
+    <div class="container">
+        <header>
+            <h1>Biliardový sprievodca</h1>
+            <nav>
                 <ul>
-                    <li>Hrá sa s gúľami č.1-9</li>
-                    <li>Gule sa musia hráť v poradí</li>
-                    <li>Víťazom je hráč ktorý zahrá 9. guľu</li>
+                    <li><a href="index.html">Domov</a></li>
+                    <li><a href="historia.html">História</a></li>
+                    <li><a href="pravidla.html">Pravidlá</a></li>
+                    <li><a href="vybavenie.html">Vybavenie</a></li>
+                    <li><a href="techniky.html">Techniky</a></li>
                 </ul>
+            </nav>
+        </header>
+
+        <main>
+            <article>
+                <h2>Vitajte v biliardovom sprievodcovi</h2>
+                <p>Biliard je fascinujúca hra s bohatou históriou a množstvom variácií. Na tejto stránke nájdete všetko, čo potrebujete vedieť o biliarde - od jeho histórie cez pravidlá až po pokročilé techniky.</p>
+                
+                <section class="mt-2">
+                    <h3>Čo nájdete na našich stránkach:</h3>
+                    <ul>
+                        <li>Podrobnú históriu biliardu a jeho vývoj</li>
+                        <li>Kompletné pravidlá najpopulárnejších variácií hry</li>
+                        <li>Prehľad potrebného vybavenia a jeho výber</li>
+                        <li>Pokročilé techniky a tipy pre lepšiu hru</li>
+                    </ul>
+                </section>
             </article>
-        </section>
+        </main>
 
-        <section id="vybavenie">
-    <h2>Vybavenie</h2>
-    
-    <dl>
-        <dt>Biliardový stôl</dt>
-        <dd>
-            <p>Štandardná veľkosť 9 stôp s povrchom z vlnenej látky</p>
-            <ul>
-                <li>Materiál: Masívne drevo</li>
-                <li>Výška: 75-80 cm od podlahy</li>
-                <li>Farba sukna: Tradične zelená</li>
-            </ul>
-        </dd>
-
-        <dt>Téry</dt>
-        <dd>
-            <p>Hlavný nástroj pre hru vyrobený z kvalitných materiálov</p>
-            <ul>
-                <li>Dĺžka: 147-150 cm</li>
-                <li>Materiál: Javorové drevo/fiberglass</li>
-                <li>Hrot: Kožený alebo plastový</li>
-            </ul>
-        </dd>
-    </dl>
-
-    <figure>
-        <img src="https://www.libertygames.co.uk/images/1/products/6024_reconditioned-snooker-table.jpg" 
-             alt="Štandardný biliardový stôl so zeleným suknom" 
-             width="400">
-        <figcaption>Profesionálny biliardový stôl s klasickým dizajnom</figcaption>
-    </figure>
-</section>
-
-        <section id="techniky">
-            <h2>Pokročilé techniky</h2>
-            <dl>
-                <dt>Backspin</dt>
-                <dd>Spätný efekt pre kontrolu bielej gule</dd>
-                <dt>Massé</dt>
-                <dd>Vertikálny úder pre ostrú zákrutu</dd>
-            </dl>
-        </section>
-    </main>
-
-    <footer>
-        <address>
-            Kontakt: <a href="mailto:info@biliardsprievodca.sk">info@biliardsprievodca.sk</a><br>
-        </address>
-        <p><a href="#top">Späť na začiatok</a></p>
-    </footer>
+        <footer>
+            <address>
+                Kontakt: <a href="mailto:info@biliardsprievodca.sk">info@biliardsprievodca.sk</a>
+            </address>
+        </footer>
+    </div>
 </body>
 
 </html>
