Pridanie odkazu na preskočenie na hlavný obsah a prehlásenie o prístupnosti do všetkých relevantných HTML stránok; vylepšenie štýlov v CSS pre lepšiu čitateľnosť a prístupnosť.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="#main-content" class="skip-link">Preskočiť na hlavný obsah</a>
     <div class="container">
         <header>
             <h1>Biliardový sprievodca</h1>
@@ -24,7 +25,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main-content">
             <article>
                 <h2>Vitajte v biliardovom sprievodcovi</h2>
                 <p>Biliard je fascinujúca hra s bohatou históriou a množstvom variácií. Na tejto stránke nájdete všetko, čo potrebujete vedieť o biliarde - od jeho histórie cez pravidlá až po pokročilé techniky.</p>
@@ -45,6 +46,7 @@
             <address>
                 Kontakt: <a href="mailto:info@biliardsprievodca.sk">info@biliardsprievodca.sk</a>
             </address>
+            <p class="mt-1"><a href="pristupnost.html">Prehlásenie o prístupnosti</a></p>
         </footer>
     </div>
 </body>
