--- a/historia.html
+++ b/historia.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="#main-content" class="skip-link">Preskočiť na hlavný obsah</a>
     <div class="container">
         <header>
             <h1>Biliardový sprievodca</h1>
@@ -24,7 +25,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main-content">
             <article>
                 <h2>História biliardu</h2>
                 <p>Prvé zmienky o hre podobnej biliardu pochádzajú už z <abbr title="Pred naším letopočtom">15. storočia</abbr> vo Francúzsku. Pôvodne sa hralo na trávnikových plochách, neskôr sa presunulo do interiérov.</p>
@@ -61,6 +62,7 @@
             <address>
                 Kontakt: <a href="mailto:info@biliardsprievodca.sk">info@biliardsprievodca.sk</a>
             </address>
+            <p class="mt-1"><a href="pristupnost.html">Prehlásenie o prístupnosti</a></p>
         </footer>
     </div>
 </body>
