--- a/pravidla.html
+++ b/pravidla.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="#main-content" class="skip-link">Preskočiť na hlavný obsah</a>
     <div class="container">
         <header>
             <h1>Biliardový sprievodca</h1>
@@ -24,7 +25,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main-content">
             <article>
                 <h2>Základné pravidlá</h2>
                 
@@ -70,6 +71,7 @@
             <address>
                 Kontakt: <a href="mailto:info@biliardsprievodca.sk">info@biliardsprievodca.sk</a>
             </address>
+            <p class="mt-1"><a href="pristupnost.html">Prehlásenie o prístupnosti</a></p>
         </footer>
     </div>
 </body>
